Closed Bug 303983 Opened 20 years ago Closed 20 years ago

bogus warning when serializing events with floating timezone to ICS

Categories

(Calendar :: Internal Components, defect)

defect
Not set
normal

Tracking

(Not tracked)

RESOLVED FIXED

People

(Reporter: dmosedale, Assigned: dmosedale)

Details

Attachments

(1 file)

If one sets the default tz to "floating", calICSService.cpp spits out bogus warnings for each event that it attempts to serialize to ICS.
Attached patch patch, v1Splinter Review
This patch adds a special case to recognize floating events.
Attachment #192053 - Flags: first-review?(shaver)
Comment on attachment 192053 [details] [diff] [review] patch, v1 r=shaver
Attachment #192053 - Flags: first-review?(shaver) → first-review+
Fix checked in.
Status: NEW → RESOLVED
Closed: 20 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: