Fix bogus warning when serializing events with a floating timezone to ICS (bug 303983), r=shaver.